widget/cocoa/nsCocoaFeatures.h
@@ -22,6 +22,7 @@ public:
   static bool OnElCapitanOrLater();
   static bool OnSierraOrLater();
   static bool OnHighSierraOrLater();
+  static bool OnSierraExactly();
 
   static bool IsAtLeastVersion(int32_t aMajor, int32_t aMinor, int32_t aBugFix=0);
 
@@ -41,9 +42,9 @@ private:
   static int32_t mOSXVersion;
 };
 
-// C-callable helper for cairo-quartz-font.c
+// C-callable helper for cairo-quartz-font.c and SkFontHost_mac.cpp
 extern "C" {
-    bool Gecko_OnSierraOrLater();
+    bool Gecko_OnSierraExactly();
 }
 
 #endif // nsCocoaFeatures_h_
